--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.6"
+  },
+  "devDependencies": {
+    "lodash": "^4.17.19"
   }
 }
